author alignment fixed

--- a/minimal-blog-card/styles.css
+++ b/minimal-blog-card/styles.css
@@ -81,5 +81,5 @@ img {
     margin-top: 20px;
     width: 100%;
     padding-left: 16px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
